# sm_system

./: .gitignore  .pre-commit-config.yaml  Contributing.md  README.md  example.ipynb  numeric_simulation.ipynb  pyproject.toml
.github/workflows/: ci.yml
experiments/: prove_of_concept.npy  setup_configs.ipynb
module/: __init__.py  config.py  filter_design.py  lse.py  lti.py  plots.py  probe.py  sim.py  sm.py  utils.py
src/sm_system/: __main__.py  _version.py  config.py  filter_design.py  lse.py  lti.py  plots.py  probe.py  sim.py  sm.py  utils.py
tests/: conftest.py  test_cli_demo_integration.py  test_imports.py  test_lse_math.py
tools/precommit/: no_cache_artifacts.py
